2014-03-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (place_objects do_rectangle): When fillcolor for an
	objects is given as a linecolor it should be interpreted as referring
	to a current linetype.

	* src/command.c: clean up to remove compiler warnings.

	* term/emf.trm:  Bold/Italic markup in enhanced text mode

2014-03-23 Bastian Maerkisch  <bmaerkisch@web.de>

	* src/command.c src/command.h src/datablock.c src/datablock.h 
	src/set.c src/show.c src/unset.c docs/gnuplot.doc demo/ellipse.dem
	demo/fitmulti.dem demo/gen-random.inc demo/rugplot.dem:
	Implement 'set print $datablock' which redirects 'print' output to
	an in-memory datablock.
	Patch #662

	* src/setshow.h src/show.c src/util.c src/util.h:  Factor out new
	routine value_to_str() which returns a string representation of a
	struct value from disp_value().

	* demo/tango_colors.dem:  set linetype cycle.

	* docs/plotstyles.gnu:  Encoding is utf8.

	* src/win/wcommon.h src/win/wgraph.c:  Fix const-ness for
	enhanced_recursion().

	* src/util.c (gprintf):  Skip leading zeroes of negative exponents.

2014-03-22  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc docs/doc2tex.c docs/titlepag.tex:
	Update documentation New Features, Changes for version 5.

	* src/plot.c (init_session) src/set.c (set_colorsequence) src/setshow.h
	src/show.c src/tables.c src/tables.h src/term_api.h:
	New command:
		set colorsequence {default | classic | podo}
	Built-in command to select one of the linetype color sequences provided
	in .../share.  The default sequence is visibly changed from the old
	red/green/blue ugliness, which should make users immediately aware that
	the colors can be customized.

	* src/set.c (set_linestyle):  Dash type of newly created linetype should
	by solid unless otherwise specified.

	* src/misc.c:  Allow `black` as a colorspec or linetype, analogous to
	`bgnd`.

2014-03-21  Ethan A Merritt  <merritt@u.washington.edu>
