@@ -79,8 +79,8 @@ unset xlabel
 
 plot '+' using 1:(cos(x-1.))  with line lt -1 lw 1 title 'lw 1',  \
      '+' using 1:(cos(x))     lt -1 pi -4 pt "C" title 'pi -4',   \
-     '+' using 1:(cos(x-.8))  lt -1 pi -3 pt "D" ps 0.2 title 'pi -3 pt "D" ps 0.2',  \
-     '+' using 1:(cos(x-.2))  lt -1 pi -6 pt "✩" title 'pi -6',\
+     '+' using 1:(cos(x-.8))  lt -1 pi -3 pt "D" title 'pi -3 pt "D"',  \
+     '+' using 1:(cos(x-.2))  lt -1 pi -6 pt "✠" tc rgb "blue" title 'pi -6 tc rgb "blue"',\
      '+' using 1:(cos(x-.4))  lt -1 pi -3 pt "✲" title 'pi -3',\
      '+' using 1:(cos(x-.6))  lt -1 pi -5 pt "☺" title 'pi -5', \
      '+' using 1:(cos(x+.2))  with line lt -1 lw 2 title 'lw 2'
